# sentryx

./: .gitignore  manage.py  pyproject.toml  requirements.txt  sample.env
account/: forms.py  views.py
export/: plotting.py  urls.py  views.py
export/templates/: home.html  show_full_meter.html  show_meter.html  show_meters.html
home/: admin.py  models.py  sessionmw.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_sessioninfo.py
home/templates/: home.html
sentryx/: asgi.py  contextprocessor.py  settings.py  urls.py  wsgi.py
static/: code01.js  style.css
templates/: base.html
templates/account/: login.html
