[project]
name = "sentryx"
version = "0.1.0"
authors = [
    { name = "Jim Carter", email = "jcarter62@gmail.com" }
]
description = "A simple web interface to display SGMA meters and provide a way to update Sentryx data."
license = "MIT"

[dependencies]
Django>=5.0.1
django-crispy-forms>=2.1
django-import-export>=3.3.6
openpyxl>=3.1.2
pandas>=2.2.0
plotly>=5.18.0
pyodbc>=5.0.1
python-decouple>=3.8
requests>=2.31.0
